Github clone final

--- a/깃허브 페이지 과제/index.css
+++ b/깃허브 페이지 과제/index.css
@@ -257,7 +257,13 @@ header {
     font-size: 14px;
 }
 #signup-section input:focus {
-    background-color: rgb(157, 205, 224);
+    background-color: #f0fbff;
+}
+
+#signup-section input.has-value {
+    border-color: #3c85c0;
+    background-color: #f0fbff;
+    color: #333;
 }
 
 #login-sentence {
