--- a/피로그래밍 홈페이지/style.css
+++ b/피로그래밍 홈페이지/style.css
@@ -106,3 +106,64 @@ a{
     cursor: pointer;
     position: relative;
 }
+
+.project-pic{
+    width: 150px;
+    height: 110px;
+    background-color: white;
+    overflow: hidden;
+    border-radius: 6px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-pic img {
+    width: 116%;
+    object-fit: contain;
+    transition: 0.3s;
+    padding: 1rem 2rem;
+}
+.project-more{
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    right: var(--gutter);
+    top: var(--gutter);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.project-more > div {
+    width: 100%;
+    height: 2px;
+    background-color: var(--bg-5);
+    transition: 0.3s;
+}
+
+
+.project-pic img {
+    width: 100%;
+    object-fit: contain;
+    transition: 0.3s;
+    padding: 1rem 2rem;
+}
+
+.project-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 5px 0;
+}
+
+.project-content--name {
+    font-size: var(--heading3);
+    font-weight: 900;
+}
+.project-content--introduction {
+    font-size: var(--body1);
+    color: var(--subtext-gray);
+    line-height: 2rem;
+    word-break: keep-all;
+}
