--- a/피로그래밍 홈페이지/style.css
+++ b/피로그래밍 홈페이지/style.css
@@ -142,6 +142,12 @@ a{
     background-color: var(--bg-5);
     transition: 0.3s;
 }
+.project-more > div:nth-child(1) {
+    margin-right: auto;
+}
+.project-more > div:nth-child(3) {
+    margin-left: auto;
+}
 .project-content {
     display: flex;
     flex-direction: column;
