--- a/피로그래밍 홈페이지/style.css
+++ b/피로그래밍 홈페이지/style.css
@@ -308,4 +308,39 @@ footer {
         width: 117%;
       }
 }
+@media screen and (max-width: 650px){
+    .div-portfolio {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding-top: var(--offset);
+    }
+        .project-content--name{
+        margin-bottom: 10px;
+    }
+        .project-pic {
+        width: min(75%, 250px);
+        height: 160px;
+    }
+        .project-content--team {
+        justify-content: center;
+    }
+  }
 
+  @media screen and (max-width: 1080px) {
+    .footer-container {
+        flex-direction: column;
+        align-content: center;
+        padding-top: 20px;
+    }
+    .footer-buttom{
+        display: none;
+    }
+
+}
+@media screen and (min-width: 1600px) {
+    .header-container{
+        width: 80%;
+    }
+}
