feat: hamburger 버튼 수정

--- a/피로그래밍 홈페이지/interview.css
+++ b/피로그래밍 홈페이지/interview.css
@@ -170,6 +170,10 @@ footer {
         width: 30px;
         flex-direction: column;
     }
+    #hamburger-icon:hover {
+        cursor: pointer;
+    }
+    
     #hamburger-icon > div{
         height: 3px;
         background-color: var(--white);
@@ -185,9 +189,7 @@ footer {
       #hamburger-icon > div:nth-of-type(3){
         width: 75%;
       }
-      #hamburger-icon > input{
-        display: none;
-      }
+
       .main-header{
         height: 7rem;
       }
