--- a/피로그래밍 홈페이지/portfolio.css
+++ b/피로그래밍 홈페이지/portfolio.css
@@ -267,6 +267,9 @@ footer {
         width: 30px;
         flex-direction: column;
     }
+    #hamburger-icon:hover {
+        cursor: pointer;
+    }
     #hamburger-icon > div{
         height: 3px;
         background-color: var(--white);
@@ -281,22 +284,6 @@ footer {
       }
       #hamburger-icon > div:nth-of-type(3){
         width: 75%;
-      }
-      #hamburger-icon > input{
-        display: none;
-      }
-      #hamburger-icon > input:checked ~ div:nth-of-type(1){
-        transform-origin: bottom;
-        transform: rotate(45deg) translate(4px, 0px);
-      }
-      #hamburger-icon > input:checked ~ div:nth-of-type(2){
-        transform-origin: top;
-        transform: rotate(-45deg);
-      }
-      #hamburger-icon > input:checked ~ div:nth-of-type(3){
-        transform-origin: bottom;
-        width: 50%;
-        transform: rotate(45deg) translate(7px, -13px);
       }
       .main-header{
         height: 7rem;
