feat: interview section html 생성

--- a/피로그래밍 홈페이지/interview.css
+++ b/피로그래밍 홈페이지/interview.css
@@ -95,6 +95,25 @@ a{
     cursor: pointer;
 }
 
+/* 인터뷰 섹션 */
+.div-interview {
+    width: 100%;
+    background-color: var(--bg-gray);
+    border-radius: 10px;
+    padding: var(--gutter);
+    display: flex;
+    gap: var(--gutter);
+    margin-bottom: var(--gutter);
+    cursor: pointer;
+    position: relative;
+}
+
+
+
+
+
+
+
 footer {
     min-height: 26px;
     background-color: var(--bg-gray);
