feat: 햄버거버튼 오류 수정(최종 완성)

--- a/피로그래밍 홈페이지/interview.css
+++ b/피로그래밍 홈페이지/interview.css
@@ -78,7 +78,6 @@ a{
     padding-top: 0;
     color: white;
     min-height: 100vh;
-
 }
 
 .header-portfolio{
@@ -304,7 +303,10 @@ footer {
 #hamburger-icon{
     display: none;
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1010px) {
+    .header-container{
+        margin: 0 -20;
+    }
     #hamburger-icon {
         display: flex;
         width: 30px;
