--- a/피로그래밍 홈페이지/portfolio.css
+++ b/피로그래밍 홈페이지/portfolio.css
@@ -11,15 +11,15 @@ body{
     text-decoration: none;
     color: white;
     outline: none;
-    width: min(1200px, 100%);
+    width: 100%;
     margin: auto;
     background-color: #000;
 }
 .main-header{
     height: 6.8rem;
-    width: 86%;
-    padding: 0 var(--offset);
-    padding-left: 32px;
+    width: min(1900px, 100%);
+    padding: 0px 114px;
+    padding-left: 145px;
     position: fixed;
     top: 0;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 1) 40%, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 0) 100%);
@@ -30,7 +30,8 @@ body{
     justify-content: space-between;
     align-items: center;
     height: 83%;
-    width: 97%;
+    width: 82%;
+    margin: 0 115px;
 }
 
 .header-container #header-icon {
@@ -71,13 +72,13 @@ a{
 }
 
 .section-portfolio {
-    margin-top: 6.8rem; /* 헤더 높이만큼 여백 추가 */
-    padding: 3rem; /* 섹션 내부 여백 */
+    width: min(1120px, 100%);
+    margin-top: 6.8rem;
+    margin: 7rem auto;
     padding-top: 0;
-    color: white; /* 텍스트 색상 */
-    min-height: 100vh; /* 섹션 최소 높이 */
+    color: white;
+    min-height: 100vh;
 }
-
 .header-portfolio{
     display: flex;
     justify-content: space-between;
@@ -261,7 +262,10 @@ footer {
 #hamburger-icon{
     display: none;
 }
-@media screen and (max-width: 850px) {
+@media screen and (max-width: 1010px) {
+    .header-container{
+        margin: 0 -20;
+    }
     #hamburger-icon {
         display: flex;
         width: 30px;
