--- a/Javascript 스톱워치/style.css
+++ b/Javascript 스톱워치/style.css
@@ -1,3 +1,8 @@
+:root {
+    --size-icon: 25px;
+    --background-color: #b5bfb6;
+}
+
 @font-face {
     font-family: 'Ownglyph_meetme-Rg';
     src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/noonfonts_2402_1@1.0/Ownglyph_meetme-Rg.woff2') format('woff2');
@@ -14,4 +19,92 @@
     align-items: center;
     height: 100vh;
     width: 100vw;
+}
+
+.timer-title{
+    font-size: 35px;
+}
+
+.timer-title .bi-stopwatch-fill{
+    width: var(--size-icon);
+    height: var(--size-icon);
+}
+
+.timer-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 5px 3px 10px;
+    height: 300px;
+    width: 500px;
+    border-radius: 35px;
+    background-color: var(--background-color);
+    margin: 10px;
+}
+
+.timer-nums{
+    background-color: white;
+    height: 35%;
+    width: 70%;
+    border-radius: 30px;
+    margin: 20px;
+    letter-spacing: 5px;
+}
+
+.timer-buttons button{
+    font-family: 'Ownglyph_meetme-Rg', sans-serif;
+    width: 60px;
+    height: 60px;
+    background-color: white;
+    border-radius: 25px;
+    margin: 0 15px;
+    font-size: 20px;
+}
+
+.timer-header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 70px;
+    width: 600px;
+    background-color: var(--background-color);
+    border-top-left-radius: 20px; /* 왼쪽 위 */
+    border-top-right-radius: 20px; /* 오른쪽 위 */
+}
+
+.timer-nums{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 70px;
+    font-weight:500;
+}
+
+.timer-nums span {
+    display: inline-block;
+    width: 120px;
+    text-align: center;
+}
+
+.timer-record {
+    margin: 20px;
+}
+
+.timer-header span{
+    margin: 0 150px;
+    font-size: 35px;
+}
+
+#delete, #check{
+    width: 35px;
+    height: 35px;
+    color: black;
+}
+
+.record-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin: 20px 0;
 }
