--- a/Javascript 스톱워치/style.css
+++ b/Javascript 스톱워치/style.css
@@ -66,11 +66,14 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 1;
     height: 70px;
     width: 600px;
     background-color: var(--background-color);
-    border-top-left-radius: 20px; /* 왼쪽 위 */
-    border-top-right-radius: 20px; /* 오른쪽 위 */
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
 }
 
 .timer-nums{
@@ -89,6 +92,11 @@
 
 .timer-record {
     margin: 20px;
+    height: 400px;
+    overflow-y: auto;
+    background-color: #f5f5f5; 
+    border-bottom-left-radius: 20px; 
+    border-bottom-right-radius: 20px; 
 }
 
 .timer-header span{
@@ -102,9 +110,22 @@
     color: black;
 }
 
+
 .record-container{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
-    margin: 20px 0;
+    width: 315px;
+    margin: 20px 24px;
+    font-size: 30px;
+    letter-spacing: 3px;
+}
+
+.record-container img{
+    width: 35px;
+    height: 35px;
+}
+
+.record-container img:hover{
+    cursor: pointer;
 }
