--- a/myMovieReviews/templates/detail.html
+++ b/myMovieReviews/templates/detail.html
@@ -20,21 +20,20 @@
 </header>
 <hr>
 <div class="detail-container">
-    <h2 class="movie-title">스파이더맨</h2>
+    <h2 class="movie-title">{{ comment.title }}</h2>
     <div class="movie-info">
         <div class="movie-image"></div>
         <div class="movie-details">
-            <p>개봉년도: 2021년</p>
-            <p>감독: 톰 홀랜드, 젠데이아 콜먼</p>
-            <p>장르: SF</p>
-            <p>별점: 4.5</p>
-            <p>러닝타임: 2시간 28분</p>
+            <p>개봉년도: {{ comment.released_year }}</p>
+            <p>감독: {{ comment.director }}</p>
+            <p>장르: {{ comment.genre }}</p>
+            <p>별점: {{ comment.rating }}</p>
+            <p>러닝타임: {{ comment.runtime }}</p>
         </div>
     </div>
     <div class="movie-review">
         <p>
-            얼마나 꽃이 가시를 것인지. 이상 속입니까, 못할 되리라봐, 높이 든든다. 위하여, 못할 귀는 인생의 티가라. <br>
-            그리고 몸의 간 뿐이다. 일월과 파야나는 그들은 약삭 빠르고 불어 크고 지체는 아니다. 창공에 둥가라 꽃 중앙에 얼마를 것은 작고 있을 것이다.
+            {{ comment.review }}
         </p>
     </div>
     <div class="actions">
