[feat] 디테일 페이지에서도 create페이지 이동 가능

--- a/myMovieReviews/templates/detail.html
+++ b/myMovieReviews/templates/detail.html
@@ -15,7 +15,7 @@
         <a href="/" class="header_left">
             <span>my<strong>Movie</strong>reviews</span>
         </a>
-        <a href="#" class="header_right">
+        <a href="{% url 'comment:comment_create' %}" class="header_right">
             <span>Add a New review</span>
         </a>
     </div>
