[feat] 추가기능 리스트 페이지 반응형

--- a/myMovieReviews/static/review.css
+++ b/myMovieReviews/static/review.css
@@ -69,7 +69,7 @@ label {
 input,
 select,
 textarea {
-    margin: 7px 0;
+    margin: 5px 0;
     padding: 10px;
     border: 1px solid #ddd;
     border-radius: 4px;
@@ -95,4 +95,9 @@ textarea {
 .btn-save:hover {
     background-color: #b71c8f;
 }
+
+.form_label {
+    margin: 5px 0;
+}
+
 
