--- a/myMovieReviews/static/detail.css
+++ b/myMovieReviews/static/detail.css
@@ -8,6 +8,11 @@ body {
     align-items: center;
 }
 
+.movie-image img{
+    width: 100%;
+    height: 100%;
+}
+
 .list_header {
     width: 100%;
     height: 70px;
