--- a/myMovieReviews/static/list.css
+++ b/myMovieReviews/static/list.css
@@ -33,6 +33,13 @@ body {
     font-weight: bold;
 }
 
+.list-section {
+    width: 90%;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 20px;
+}
+
 .list-container {
     margin: 20px 0;
     display: flex;
@@ -72,6 +79,11 @@ body {
     border-radius: 4px;
 }
 
+img {
+    width: 100%;
+    height: 100%;
+}
+
 .movie-info {
     padding: 10px;
     flex-grow: 1;
@@ -82,4 +94,35 @@ body {
     font-weight: bold;
     margin: 5px 0;
     color: #333;
+}
+
+
+@media (max-width: 1500px) {
+    .list-section {
+        grid-template-columns: repeat(5, 1fr);
+    }
+}
+
+@media (max-width: 1280px) {
+    .list-section {
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width: 1020px) {
+    .list-section {
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width: 753px) {
+    .list-section {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width: 500px) {
+    .list-section {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
