--- a/SWIDEA_SITE/templates/base.html
+++ b/SWIDEA_SITE/templates/base.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="{% url 'ideas:idea_create' %}">아이디어 등록</a></li>
-                    <li><a href="">아이디어 관리</a></li>
+                    <li><a href="{% url 'ideas:main' %}">아이디어 관리</a></li>
                     <li><a href="">개발툴 등록</a></li>
                     <li><a href="">개발툴 관리</a></li>
                 </ul>
