[feat] 개발 툴 기본 기능까지 구현

--- a/SWIDEA_SITE/templates/base.html
+++ b/SWIDEA_SITE/templates/base.html
@@ -19,8 +19,8 @@
                 <ul>
                     <li><a href="{% url 'ideas:idea_create' %}">아이디어 등록</a></li>
                     <li><a href="{% url 'ideas:main' %}">아이디어 관리</a></li>
-                    <li><a href="">개발툴 등록</a></li>
-                    <li><a href="">개발툴 관리</a></li>
+                    <li><a href="{% url 'tools:tools_create' %}">개발툴 등록</a></li>
+                    <li><a href="{% url 'tools:tools_list' %}">개발툴 관리</a></li>
                 </ul>
             </nav>
         </div>
