--- a/SWIDEA_SITE/static/list.css
+++ b/SWIDEA_SITE/static/list.css
@@ -48,7 +48,7 @@ main {
     padding: 0.5rem 0;
     position: absolute;
     margin-top: 0.5rem;
-    display: none; /* 기본적으로 숨김 */
+    display: none;
 }
 
 .sort-button .dropdown-menu li {
@@ -72,6 +72,7 @@ main {
 }
 
 .idea-card {
+    position: relative;
     width: 300px;
     background-color: #f9f9f9;
     border: 1px solid #ddd;
@@ -88,9 +89,9 @@ main {
 }
 
 .idea-image img {
-    width: 100%; /* 카드 너비에 맞춤 */
-    height: 150px; /* 일정한 높이로 고정 */
-    object-fit: cover; /* 이미지 비율을 유지하며 카드에 맞게 자름 */
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
     border-radius: 5px;
 }
 
@@ -103,6 +104,31 @@ main {
 .idea-content p {
     font-size: 0.9rem;
     color: #555;
+}
+
+/* 찜하기 버튼 스타일 */
+.like-button {
+    position: absolute;
+    top: 18px;
+    right: 18px;
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    opacity: 1;
+    transition: opacity 0.2s ease;
+}
+
+
+.like-button img {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+
+.like-button img:hover {
+    transform: scale(1.1);
 }
 
 /* 페이지네이션 */
