--- a/SWIDEA_SITE/static/tool_list.css
+++ b/SWIDEA_SITE/static/tool_list.css
@@ -81,13 +81,14 @@ body {
     gap: 20px;
     justify-content: center;
     padding: 20px;
+    flex-direction: column;
 }
 
 .idea-card {
     background-color: #ffffff;
     border: 1px solid #ddd;
     border-radius: 10px;
-    width: 300px;
+    width: 99.9%;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     text-decoration: none;
@@ -107,19 +108,32 @@ body {
 }
 
 .idea-content {
-    padding: 15px;
+    padding: 10px 15px;
     text-align: center;
+    display: flex;
+    align-items: center;
+}
+
+.idea-content #content1 {
+    width: 100px;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.idea-content #content2 {
+    width: 200px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .idea-content h2 {
     font-size: 1.5rem;
-    margin-bottom: 10px;
     color: #2d2d2d;
 }
 
 .idea-content p {
     font-size: 1rem;
-    margin-bottom: 5px;
+    margin-left: 10px;
 }
 
 /* 페이지네이션 스타일 */
